--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=1" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=1" />
+    <link rel="apple-touch-icon" href="/favicon.svg?v=1" />
+    <link rel="shortcut icon" href="/favicon.ico?v=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Market Pulse - Real-time Market Sentiment Analysis</title>
     <meta name="description" content="Market Pulse - Advanced trading platform with real-time market sentiment analysis, professional charts, and AI-powered insights." />
